--- a/src/ui/index.css
+++ b/src/ui/index.css
@@ -1,4 +1,7 @@
 body {
+  margin: 0;
+  color: #303133;
+  font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
