--- a/src/components/sider/style/index.module.scss
+++ b/src/components/sider/style/index.module.scss
@@ -1,5 +1,6 @@
 @use 'src/assets/styles/variables' as *;
 @use 'src/assets/styles/mixins' as *;
+@use './menu.scss';
 
 $border: 1px solid getColor('light', 'divider');
 $siderWidth: 24rem;
@@ -12,7 +13,7 @@ $siderWidth: 24rem;
   height: 100vh;
   border-right: $border;
   background: getColor('light', 'background');
-  transition: transform getDuration('normal') ease-out;
+  // transition: transform getDuration('normal') ease-out;
   transform: translateX(-$siderWidth);
 
   &.in {
@@ -23,8 +24,15 @@ $siderWidth: 24rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 1rem;
     padding: 0 1rem;
     height: 5rem;
-    // border-bottom: $border;
+    border-bottom: $border;
+
+    > .drawerControl {
+      position: absolute;
+      right: 1rem;
+      font-size: 1.4rem;
+    }
   }
 }
