--- a/src/assets/styles/responsive.scss
+++ b/src/assets/styles/responsive.scss
@@ -4,21 +4,21 @@ $min-screen: 600px;
 $max-screen: 1200px;
 
 :root {
-	font-size: 10px;
+  font-size: 10px;
 }
 
 article {
-	font-size: $min-font-size;
+  font-size: $min-font-size;
 }
 
-@media (min-width: $min-screen) and (max-width: $max-screen) {
-	article {
-		font-size: calc($min-font-size + (2 - 1.4) * ((100vw - $min-screen) / (1200 - 800)));
-	}
-}
+// @media (min-width: $min-screen) and (max-width: $max-screen) {
+// 	article {
+// 		font-size: calc($min-font-size + (2 - 1.4) * ((100vw - $min-screen) / (1200 - 800)));
+// 	}
+// }
 
-@media (min-width: $max-screen) {
-	article {
-		font-size: $max-font-size;
-	}
-}
+// @media (min-width: $max-screen) {
+// 	article {
+// 		font-size: $max-font-size;
+// 	}
+// }
