--- a/src/components/header/style/index.module.scss
+++ b/src/components/header/style/index.module.scss
@@ -14,4 +14,9 @@
   background: getColor('light', 'background');
 
   @include glass;
+
+  > .drawerControl {
+    position: absolute;
+    left: 1rem;
+  }
 }
