--- a/src/components/markdown/style/editor.scss
+++ b/src/components/markdown/style/editor.scss
@@ -28,7 +28,7 @@ $divider: getColor('light', 'divider');
       font-size: 1.6rem;
 
       > strong {
-        margin-left: 8px;
+        margin-left: 1rem;
         font-size: 1.4rem;
       }
     }
@@ -70,11 +70,6 @@ $divider: getColor('light', 'divider');
       overflow-y: auto;
       padding: $articlePadding;
       background: getColor('light', 'background');
-
-      code {
-        font-size: 1.3rem;
-        font-family: 'Roboto Mono';
-      }
     }
   }
 }
