--- a/src/components/rightSider/index.module.scss
+++ b/src/components/rightSider/index.module.scss
@@ -1,8 +1,8 @@
 .right_sider {
   position: absolute;
   top: 7rem;
-  right: calc(50% - 550px);
-  width: 20rem;
+  right: calc(50% - 55rem);
+  width: 24rem;
   height: calc(100% - 7rem);
 
   &.narrowing {
