chore: nav menu

--- a/src/components/page/style/index.module.scss
+++ b/src/components/page/style/index.module.scss
@@ -17,7 +17,7 @@
   display: flex;
   justify-content: center;
   padding-top: 5rem;
-  // transition: width getDuration('normal') ease-out;
+  transition: width getDuration('normal') ease-out;
 
   @extend .page;
 
