--- a/src/components/rightSider/index.module.scss
+++ b/src/components/rightSider/index.module.scss
@@ -1,9 +1,12 @@
+@use 'src/assets/styles/variables' as *;
+
 .right_sider {
   position: absolute;
   top: 7rem;
   right: calc(50% - 55rem);
   width: 24rem;
   height: calc(100% - 7rem);
+  transition: right getDuration('normal') ease-out;
 
   &.narrowing {
     right: calc(50% - 67rem);
