--- a/src/components/header/style/search.scss
+++ b/src/components/header/style/search.scss
@@ -2,9 +2,9 @@
 
 $divider: getColor('light', 'divider');
 
-.app_center {
+.search {
   top: 6rem;
-  right: 8rem;
+  right: 13rem;
   padding: 1rem;
   min-height: 0;
   width: 30rem;
