--- a/src/components/markdown/style/editor.scss
+++ b/src/components/markdown/style/editor.scss
@@ -22,14 +22,12 @@ $divider: getColor('light', 'divider');
       min-width: 144px;
     }
 
-    .publish {
-      display: flex;
-      align-items: center;
-      font-weight: bold;
-      font-size: 1.6rem;
-
-      > strong {
-        margin-left: 1rem;
+    .operation {
+      .publish {
+        display: flex;
+        align-items: center;
+        margin-right: 1rem;
+        font-weight: bold;
         font-size: 1.4rem;
       }
     }
@@ -61,6 +59,7 @@ $divider: getColor('light', 'divider');
         padding: $articlePadding;
         width: 100%;
         height: 100%;
+        font-size: 1.5rem;
         resize: none;
 
         @include inputBase;
@@ -71,6 +70,20 @@ $divider: getColor('light', 'divider');
       overflow-y: auto;
       padding: $articlePadding;
       background: getColor('light', 'background');
+
+      p,
+      ul > li,
+      ol > li {
+        line-height: 1.75em;
+      }
+
+      a {
+        color: getTheme('highlight');
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
   }
 }
