--- a/src/pages/articleUpload/style/articleInfo.scss
+++ b/src/pages/articleUpload/style/articleInfo.scss
@@ -6,12 +6,10 @@ $highlight: getTheme('highlight');
 $divider: getColor('light', 'divider');
 $shadow: 1px 4px 24px rgba(#000000, 0.1);
 
-.profile_wrapper {
+.article_info {
   position: relative;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
   padding: 1rem;
+  padding-top: 4rem;
   width: 36rem;
   border: 1px solid $divider;
   border-radius: 1rem;
@@ -20,27 +18,17 @@ $shadow: 1px 4px 24px rgba(#000000, 0.1);
 
   @include withTitle;
   @include withClose;
-  @include withReturn;
 
-  .avatar_wrapper {
+  .pic_wrapper {
     position: relative;
-    overflow: hidden;
-    margin: 2rem 1rem;
-    width: 10rem;
+    z-index: 1;
+    width: 16rem;
     height: 10rem;
-    border-radius: 50%;
+    border-radius: 4px;
     box-shadow: $shadow;
     cursor: pointer;
 
-    @include flexCenter;
-
-    > img {
-      width: 100%;
-      height: 100%;
-      border-radius: inherit;
-    }
-
-    > .upload_mask {
+    .pic_mask {
       position: absolute;
       width: 100%;
       height: 100%;
@@ -53,5 +41,18 @@ $shadow: 1px 4px 24px rgba(#000000, 0.1);
         backdrop-filter: blur(24px);
       }
     }
+
+    .title_pic {
+      width: 100%;
+      height: 100%;
+      border-radius: inherit;
+      vertical-align: text-top;
+
+      object-fit: cover;
+    }
+  }
+
+  .add {
+    margin-top: 1rem;
   }
 }
