--- a/src/components/author/style/index.module.scss
+++ b/src/components/author/style/index.module.scss
@@ -1,49 +1,1 @@
-@use 'src/assets/styles/variables' as *;
-@use 'src/assets/styles/mixins' as *;
-
-.author_card {
-  padding: 1rem;
-  padding-bottom: 0;
-
-  .item {
-    padding: 0;
-
-    > span {
-      margin-left: 1rem;
-      font-size: 1.4rem;
-    }
-
-    &.name_wrapper {
-      padding: 1rem;
-      height: 10rem;
-
-      > .avatar {
-        width: 4rem;
-        height: 4rem;
-        border: 3px solid #333;
-        border-radius: 50%;
-        font-size: 3rem;
-
-        @include flexCenter;
-      }
-
-      > .right_wrapper {
-        margin-left: 1rem;
-
-        .name {
-          color: getColor('light', 'textPrimary');
-          font-size: 1.6rem;
-        }
-
-        .introduce {
-          overflow: hidden;
-          width: 12rem;
-          color: getColor('light', 'textSecondary');
-          text-overflow: ellipsis;
-          white-space: nowrap;
-          font-size: 1.2rem;
-        }
-      }
-    }
-  }
-}
+@use 'articleCard.scss';
