--- a/src/components/header/style/appCenter.scss
+++ b/src/components/header/style/appCenter.scss
@@ -10,4 +10,5 @@ $divider: getColor('light', 'divider');
   width: 30rem;
   height: 30rem;
   border: 1px solid $divider;
+  border-radius: 0.6rem;
 }
