--- a/src/components/base/style/index.module.scss
+++ b/src/components/base/style/index.module.scss
@@ -1,14 +1,21 @@
 @use 'src/assets/styles/variables' as *;
+@use 'aspectRatio.scss';
 
 .panel {
   min-height: 20rem;
   width: 100%;
   border: 1px solid getColor('light', 'divider');
-  border-radius: 4px;
+  border-radius: 6px;
   background: getColor('light', 'background');
 }
 
 .affix {
   position: sticky;
   top: 7rem;
+}
+
+.uploader {
+  > input {
+    display: none;
+  }
 }
