--- a/src/components/markdown/style/index.module.scss
+++ b/src/components/markdown/style/index.module.scss
@@ -5,7 +5,7 @@
   display: block;
   overflow-x: auto;
   padding: 1rem;
-  border-radius: 4px;
+  border-radius: 6px;
   background: getColor('light', 'backgroundVariant');
 
   code {
@@ -15,19 +15,13 @@
   }
 }
 
-.uploader {
-  > input {
-    display: none;
-  }
-}
-
 .pic {
   display: flex;
   justify-content: center;
   width: 100%;
 
   > img {
-    max-width: 300px;
+    max-width: 80%;
     max-height: 500px;
   }
 }
