--- a/src/components/modal/style/profile.scss
+++ b/src/components/modal/style/profile.scss
@@ -7,51 +7,54 @@ $divider: getColor('light', 'divider');
 $shadow: 1px 4px 24px rgba(#000000, 0.1);
 
 .profile_wrapper {
-  position: relative;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  padding: 1rem;
-  width: 36rem;
-  border: 1px solid $divider;
-  border-radius: 1rem;
-  background: getColor('light', 'background');
-  box-shadow: $shadow;
+	position: relative;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	padding: 1rem;
+	width: 36rem;
+	border: 1px solid $divider;
+	border-radius: 1rem;
+	background: getColor('light', 'background');
+	box-shadow: $shadow;
 
-  @include withTitle;
-  @include withClose;
-  @include withReturn;
+	@include withTitle;
+	@include withClose;
+	@include withReturn;
 
-  .avatar_wrapper {
-    position: relative;
-    overflow: hidden;
-    margin: 2rem 1rem;
-    width: 10rem;
-    height: 10rem;
-    border-radius: 50%;
-    box-shadow: $shadow;
-    cursor: pointer;
+	.avatar_wrapper {
+		position: relative;
+		overflow: hidden;
+		margin: 2rem 1rem;
+		width: 10rem;
+		height: 10rem;
+		border-radius: 50%;
+		box-shadow: $shadow;
+		cursor: pointer;
 
-    @include flexCenter;
+		@include flexCenter;
 
-    > img {
-      width: 100%;
-      height: 100%;
-      border-radius: inherit;
-    }
+		> img {
+			width: 100%;
+			height: 100%;
+			border-radius: inherit;
+			vertical-align: text-top;
 
-    > .upload_mask {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      border-radius: inherit;
-      color: #fff;
-      font-size: 3rem;
+			object-fit: cover;
+		}
 
-      @include flexCenter;
-      &:hover {
-        backdrop-filter: blur(24px);
-      }
-    }
-  }
+		> .upload_cover {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			border-radius: inherit;
+			color: #fff;
+			font-size: 3rem;
+
+			@include flexCenter;
+			&:hover {
+				backdrop-filter: blur(24px);
+			}
+		}
+	}
 }
