--- a/src/components/header/style/index.module.scss
+++ b/src/components/header/style/index.module.scss
@@ -5,37 +5,44 @@
 @use 'search';
 
 .header {
-  position: fixed;
-  top: 0;
-  z-index: getZIndex('header');
-  display: flex;
-  align-items: center;
-  padding: 0 1rem;
-  width: 100%;
-  height: 5rem;
-  border-bottom: 1px solid #dedede;
-  background: getColor('light', 'background');
+	position: fixed;
+	top: 0;
+	z-index: getZIndex('header');
+	display: flex;
+	align-items: center;
+	padding: 0 1rem;
+	width: 100%;
+	height: 5rem;
+	border-bottom: 1px solid #dedede;
+	background: getColor('light', 'background');
 
-  @include glass;
+	@include glass;
 
-  > .drawerControl {
-    position: absolute;
-    left: 1rem;
-  }
+	> .drawerControl {
+		position: absolute;
+		left: 1rem;
 
-  > .tool_bar {
-    position: absolute;
-    right: 1rem;
-    display: flex;
-    align-items: center;
+		> svg {
+			font-size: 2rem;
+		}
+	}
 
-    > .btn {
-      margin-right: 1rem;
-    }
+	> .tool_bar {
+		position: absolute;
+		right: 1rem;
+		display: flex;
+		align-items: center;
 
-    > .go_login {
-      margin-left: 1rem;
-      @extend.btn;
-    }
-  }
+		> .btn {
+			margin-right: 1rem;
+			> svg {
+				font-size: 2rem;
+			}
+		}
+
+		> .go_login {
+			margin-left: 1rem;
+			@extend.btn;
+		}
+	}
 }
