--- a/src/components/markdown/style/editor.scss
+++ b/src/components/markdown/style/editor.scss
@@ -4,86 +4,90 @@
 $divider: getColor('light', 'divider');
 
 .markdown_editor {
-  height: calc(100vh - 5rem);
+	height: calc(100vh - 5rem);
 
-  > .header_bar {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 1rem;
-    width: 100%;
-    height: 5rem;
-    background: getColor('light', 'backgroundVariant');
+	> .header_bar {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		padding: 0 1rem;
+		width: 100%;
+		height: 5rem;
+		background: getColor('light', 'backgroundVariant');
 
-    .tools {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      min-width: 144px;
-    }
+		.tools {
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			min-width: 144px;
 
-    .operation {
-      .publish {
-        display: flex;
-        align-items: center;
-        margin-right: 1rem;
-        font-weight: bold;
-        font-size: 1.4rem;
-      }
-    }
-  }
+			svg {
+				font-size: 2rem;
+			}
+		}
 
-  > .content {
-    display: flex;
-    overflow: hidden;
-    width: 100%;
-    height: calc(100% - 5rem);
-    border-top: 1px solid $divider;
-    font-size: 1.4rem;
+		.operation {
+			.publish {
+				display: flex;
+				align-items: center;
+				margin-right: 1rem;
+				font-weight: bold;
+				font-size: 1.4rem;
+			}
+		}
+	}
 
-    $articlePadding: 1rem 1.5rem;
+	> .content {
+		display: flex;
+		overflow: hidden;
+		width: 100%;
+		height: calc(100% - 5rem);
+		border-top: 1px solid $divider;
+		font-size: 1.4rem;
 
-    > article {
-      width: 50%;
-      height: 100%;
+		$articlePadding: 1rem 1.5rem;
 
-      &:first-child {
-        border-right: 1px solid $divider;
-      }
-    }
+		> article {
+			width: 50%;
+			height: 100%;
 
-    > .editor {
-      border: none;
+			&:first-child {
+				border-right: 1px solid $divider;
+			}
+		}
 
-      > textarea {
-        padding: $articlePadding;
-        width: 100%;
-        height: 100%;
-        font-size: 1.5rem;
-        resize: none;
+		> .editor {
+			border: none;
 
-        @include inputBase;
-      }
-    }
+			> textarea {
+				padding: $articlePadding;
+				width: 100%;
+				height: 100%;
+				font-size: 1.5rem;
+				resize: none;
 
-    > .preview {
-      overflow-y: auto;
-      padding: $articlePadding;
-      background: getColor('light', 'background');
+				@include inputBase;
+			}
+		}
 
-      p,
-      ul > li,
-      ol > li {
-        line-height: 1.75em;
-      }
+		> .preview {
+			overflow-y: auto;
+			padding: $articlePadding;
+			background: getColor('light', 'background');
 
-      a {
-        color: getTheme('highlight');
+			p,
+			ul > li,
+			ol > li {
+				line-height: 1.75em;
+			}
 
-        &:hover {
-          text-decoration: underline;
-        }
-      }
-    }
-  }
+			a {
+				color: getTheme('highlight');
+
+				&:hover {
+					text-decoration: underline;
+				}
+			}
+		}
+	}
 }
