--- a/src/components/sider/style/index.module.scss
+++ b/src/components/sider/style/index.module.scss
@@ -6,32 +6,36 @@ $border: 1px solid getColor('light', 'divider');
 $siderWidth: 24rem;
 
 .sider {
-  position: fixed;
-  left: 0;
-  z-index: getZIndex('sider');
-  width: $siderWidth;
-  height: 100vh;
-  border-right: $border;
-  background: getColor('light', 'background');
-  transition: transform getDuration('normal') ease-out;
-  transform: translateX(-$siderWidth);
+	position: fixed;
+	left: 0;
+	z-index: getZIndex('sider');
+	width: $siderWidth;
+	height: 100vh;
+	border-right: $border;
+	background: getColor('light', 'background');
+	transition: transform getDuration('normal') ease-out;
+	transform: translateX(-$siderWidth);
 
-  &.in {
-    transform: translateX(0);
-  }
+	&.in {
+		transform: translateX(0);
+	}
 
-  > .top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 1rem;
-    padding: 0 1rem;
-    height: 5rem;
-    border-bottom: $border;
+	> .top {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		margin-bottom: 1rem;
+		padding: 0 1rem;
+		height: 5rem;
+		border-bottom: $border;
 
-    > .drawerControl {
-      position: absolute;
-      right: 1rem;
-    }
-  }
+		> .drawerControl {
+			position: absolute;
+			right: 1rem;
+
+			> svg {
+				font-size: 2rem;
+			}
+		}
+	}
 }
