--- a/src/components/sider/style/menu.scss
+++ b/src/components/sider/style/menu.scss
@@ -1,29 +1,32 @@
 @use 'src/assets/styles/variables' as *;
 
 .menu {
-  .icon {
-    margin-right: 2rem;
-    font-size: 1.7rem;
-  }
+	.icon {
+		margin-right: 2rem;
+		> svg {
+			font-size: 2rem;
+		}
+	}
 
-  .level1 {
-    font-weight: bold;
-    font-size: 1.5rem;
-  }
+	.level1 {
+		font-weight: bold;
+		font-size: 1.5rem;
+	}
 
-  .level2 {
-    padding-left: 4rem;
-    font-weight: bold;
-    font-size: 1.4rem;
-  }
+	.level2 {
+		padding-left: 5rem;
+		font-weight: bold;
+		font-size: 1.4rem;
+	}
 
-  .level3 {
-    font-size: 1.4rem;
-  }
+	.level3 {
+		padding-left: 8rem;
+		font-size: 1.4rem;
+	}
 
-  .active {
-    li {
-      color: getTheme('highlight');
-    }
-  }
+	.active {
+		li {
+			color: getTheme('highlight');
+		}
+	}
 }
