--- a/src/components/sider/style/menu.scss
+++ b/src/components/sider/style/menu.scss
@@ -1,10 +1,10 @@
-@use 'src/assets/styles/variables' as *;
-
 .menu {
 	.icon {
 		margin-right: 2rem;
 		> svg {
 			font-size: 2rem;
+
+			@include flexCenter;
 		}
 	}
 
