chore: add global message component

--- a/src/components/global/style/index.module.scss
+++ b/src/components/global/style/index.module.scss
@@ -1,7 +1,7 @@
 @import 'login';
 @import 'register';
 @import 'profile';
-@import 'prompt';
+@import 'message';
 
 .modal_wrapper {
 	position: fixed;
