--- a/src/components/header/style/appCenter.scss
+++ b/src/components/header/style/appCenter.scss
@@ -1,12 +1,12 @@
 $divider: getColor('light', 'divider');
 
 .app_center {
-	top: 6rem;
-	right: 8rem;
+	position: absolute;
+	top: 5rem;
+	right: -1rem;
 	padding: 1rem;
 	min-height: 0;
 	width: 30rem;
-	height: 30rem;
 	border: 1px solid $divider;
 	border-radius: 0.6rem;
 }
