--- a/src/components/header/style/userProfile.scss
+++ b/src/components/header/style/userProfile.scss
@@ -1,21 +1,24 @@
 $divider: getColor('light', 'divider');
+$theme: getTheme('highlight');
+$textSecondary: getColor('light', 'textSecondary');
 
 .user_avatar {
+	position: relative;
 	margin-right: 1rem;
+	min-height: 0;
 	width: 4rem;
 	height: 4rem;
 	border: 2px solid transparent;
 	border-radius: 50%;
-	cursor: pointer;
 	transition: border getDuration('normal');
 
 	@include flexCenter;
 	&:hover {
-		border: 2px solid getTheme('highlight');
+		border: 2px solid $theme;
 	}
 
 	&.active {
-		border: 2px solid getTheme('highlight');
+		border: 2px solid $theme;
 	}
 
 	> img {
@@ -26,15 +29,52 @@ $divider: getColor('light', 'divider');
 
 		object-fit: cover;
 	}
-}
 
-.user_profile {
-	top: 6rem;
-	right: 3rem;
-	padding: 1rem;
-	min-height: 0;
-	width: 28rem;
-	height: 32rem;
-	border: 1px solid $divider;
-	border-radius: 0.6rem;
+	.user_profile {
+		position: absolute;
+		top: 5rem;
+		right: -1rem;
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		padding: 2rem;
+		min-height: 0;
+		width: 28rem;
+		border: 1px solid $divider;
+		border-radius: 0.6rem;
+
+		.large_avatar {
+			> img {
+				width: 8rem;
+				height: 8rem;
+				border-radius: 50%;
+				vertical-align: text-top;
+
+				object-fit: cover;
+			}
+		}
+
+		> h3 {
+			margin-bottom: 0.5rem;
+		}
+
+		> span {
+			color: $textSecondary;
+		}
+
+		.contact_wrapper {
+			display: flex;
+			justify-content: space-between;
+			width: 60%;
+
+			svg {
+				color: $textSecondary;
+				font-size: 2rem;
+			}
+		}
+
+		.divider {
+			margin: 1.6rem 0;
+		}
+	}
 }
