--- a/src/components/markdown/style/index.module.scss
+++ b/src/components/markdown/style/index.module.scss
@@ -5,7 +5,7 @@
 	overflow-x: auto;
 	padding: 1rem;
 	border-radius: 6px;
-	background: getColor('light', 'backgroundVariant');
+	background: get_color('light', 'backgroundVariant');
 
 	code {
 		font-size: 1.3rem;
