--- a/src/assets/styles/_mixins.scss
+++ b/src/assets/styles/_mixins.scss
@@ -1,16 +1,16 @@
 @mixin glass {
-	background: rgba(getColor('light', 'background'), 0.7);
+	background: rgba(get_color('light', 'background'), 0.7);
 
 	backdrop-filter: saturate(50%) blur(20px);
 }
 
-@mixin flexCenter {
+@mixin flex_center {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
-@mixin inputBase {
+@mixin input_base {
 	outline: none;
 	border: none;
 
