--- a/src/components/author/style/articleCard.scss
+++ b/src/components/author/style/articleCard.scss
@@ -23,7 +23,7 @@
 				height: 5rem;
 				border-radius: 50%;
 
-				@include flexCenter;
+				@include flex_center;
 				> img {
 					width: 100%;
 					height: 100%;
@@ -39,7 +39,7 @@
 				width: 12rem;
 
 				.name {
-					color: getColor('light', 'textPrimary');
+					color: get_color('light', 'textPrimary');
 					font-weight: bold;
 					font-size: 1.6rem;
 				}
