--- a/src/components/header/style/index.module.scss
+++ b/src/components/header/style/index.module.scss
@@ -1,48 +1,5 @@
+@import 'header';
 @import 'userProfile';
 @import 'appCenter';
 @import 'search';
-
-.header {
-	position: fixed;
-	top: 0;
-	z-index: getZIndex('header');
-	display: flex;
-	align-items: center;
-	padding: 0 1rem;
-	width: 100%;
-	height: 5rem;
-	border-bottom: 1px solid #dedede;
-	background: getColor('light', 'background');
-
-	@include glass;
-
-	> .drawerControl {
-		position: absolute;
-		left: 1rem;
-
-		> svg {
-			font-size: 2rem;
-		}
-	}
-
-	> .tool_bar {
-		position: absolute;
-		right: 1rem;
-		display: flex;
-		align-items: center;
-
-		> .btn {
-			position: relative;
-			margin-right: 1rem;
-
-			> svg {
-				font-size: 2rem;
-			}
-		}
-
-		> .go_login {
-			margin-left: 1rem;
-			@extend.btn;
-		}
-	}
-}
+@import 'branch';
