--- a/src/components/markdown/style/editor.scss
+++ b/src/components/markdown/style/editor.scss
@@ -1,4 +1,4 @@
-$divider: getColor('light', 'divider');
+$divider: get_color('light', 'divider');
 
 .markdown_editor {
 	height: calc(100vh - 5rem);
@@ -10,7 +10,7 @@ $divider: getColor('light', 'divider');
 		padding: 0 1rem;
 		width: 100%;
 		height: 5rem;
-		background: getColor('light', 'backgroundVariant');
+		background: get_color('light', 'backgroundVariant');
 
 		.tools {
 			display: flex;
@@ -63,14 +63,14 @@ $divider: getColor('light', 'divider');
 				font-size: 1.5rem;
 				resize: none;
 
-				@include inputBase;
+				@include input_base;
 			}
 		}
 
 		> .preview {
 			overflow-y: auto;
 			padding: $articlePadding;
-			background: getColor('light', 'background');
+			background: get_color('light', 'background');
 
 			p,
 			ul > li,
@@ -79,7 +79,7 @@ $divider: getColor('light', 'divider');
 			}
 
 			a {
-				color: getTheme('highlight');
+				color: get_theme('primary');
 
 				&:hover {
 					text-decoration: underline;
