--- a/src/components/page/style/index.module.scss
+++ b/src/components/page/style/index.module.scss
@@ -2,7 +2,7 @@
 	position: relative;
 	min-height: 100vh;
 	width: 100vw;
-	background: getColor('light', 'background');
+	background: get_color('light', 'background');
 }
 
 .stable_page {
@@ -15,7 +15,7 @@
 	display: flex;
 	justify-content: center;
 	padding-top: 5rem;
-	transition: width getDuration('normal') ease-out;
+	transition: width $normal ease-out;
 
 	@extend .page;
 
@@ -37,7 +37,7 @@
 	// position: fixed;
 	// top: 0;
 	// left: 0;
-	z-index: getZIndex('modal');
+	z-index: $z_modal;
 	// width: 100vw;
 	// height: 100vh;
 
