--- a/src/pages/articleUpload/style/common.scss
+++ b/src/pages/articleUpload/style/common.scss
@@ -1,4 +1,4 @@
-@mixin withTitle {
+@mixin with_title {
 	> h1 {
 		position: absolute;
 		top: 0;
@@ -9,7 +9,7 @@
 	}
 }
 
-@mixin withClose {
+@mixin with_close {
 	.close {
 		position: absolute;
 		top: 1rem;
