--- a/src/pages/notFound/style/index.module.scss
+++ b/src/pages/notFound/style/index.module.scss
@@ -1,5 +1,5 @@
 .not_found_page {
-	@include flexCenter;
+	@include flex_center;
 
 	> .prompt {
 		display: flex;
@@ -15,11 +15,11 @@
 			width: 60%;
 
 			> .go_back {
-				background: getColor('light', 'background');
+				background: get_color('light', 'background');
 				box-shadow: 0 1px 3px rgba(26, 26, 26, 0.1);
 
 				&:hover {
-					background: getColor('light', 'backgroundVariant');
+					background: get_color('light', 'backgroundVariant');
 				}
 			}
 		}
